syntax = "proto3";
package ink.pmc.framework.bridge.proto;

import "bridge/ServerInfo.proto";
import "bridge/PlayerInfoLookupMessage.proto";

message NotificationMessage {
  oneof content {
    ServerInfo server_registration = 1;
    ServerInfo server_info_update = 2;
    PlayerInfoLookupMessage player_info_lookup = 3;
  }
}