syntax = "proto3";
package ink.pmc.framework.bridge.proto;

import "bridge/ServerInfo.proto";
import "bridge/PlayerInfo.proto";
import "bridge/WorldInfo.proto";

message ServerRegistrationAckMessage {
  oneof state {
    bool ok = 1;
    bool id_existed = 2;
  }
}